# omnicept-facecam

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  omnicept-facecam.sdp
src/: macros.hpp  main.cpp  omnicept.hpp  socket.hpp
